--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<article class="product">
 				<img src="images/img-pdto-2.jpg" alt="pdto 02">
 				<h2>Lorem ipsum amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+				<p>Lorem ipsum ddsr sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
 				<a href="#">ver más</a>
 			</article>
 			<article class="product">
